# Cascade

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Run-Explorer-Autonomous.ps1  Run-Explorer.ps1  global.json  test-tcp.js  test-wsl.js
python/: README.md  generate_proto.ps1  generate_proto.sh  pyproject.toml  requirements.txt  setup_venv.ps1  setup_venv.sh  test_firestore_quick.py
python/.cascade_sandbox/run_a5f504858508/: skill_wb_new.py
python/agents/: README.md
python/agents/code_exec/: __init__.py  python_executor.py  python_runner.py
python/agents/core/: README.md  __init__.py  approvals.py  autonomous_agent.py  intent_classifier.py  planning_agent.py  summarization.py  verify_prompts.py
python/agents/explorer/: README.md  __init__.py  api_discovery.py  api_evaluator.py  autonomous_explorer.py  cli.py  code_generator.py  documentation_map.py  embeddings.py  graph.py  instruction_parser.py  manual_reader.py  observer.py  planner.py  prompts.py  prompts_autonomous.py  skill_map.py  verifier.py
python/agents/orchestrator/: README.md  __init__.py  autonomous_orchestrator.py  cli.py  (+1 more)
python/cascade_agent/: __init__.py  config.py
python/cascade_client/: README.md  __init__.py  a2a.py  grpc_client.py  models.py  playwright_semantics.py  playwright_session.py  selectors.py  tools.py  vision.py
python/clients/: README.md  __init__.py  llm_client.py
python/mcp_server/: README.md  __init__.py  api_tools.py  automation_router.py  body_tools.py  cli.py  explorer_tools.py  llm_integration.py  playwright_tools.py  sandbox_tools.py  server.py  skill_tools.py  tool_registry.py
python/orchestrator/: README.md  __init__.py  cli.py  graph.py  router.py  state.py
python/paddle_ocr_service/: __init__.py  models.py  ocr_service.py  requirements.txt  server.py
python/storage/: README.md  __init__.py  approval_policies.py  code_artifact.py  firestore_client.py  vector_store.py
python/tests/: __init__.py  conftest.py  helpers.py
(+494 files in other folders)
